# pilcrow

./: Cargo.toml
data/: chain.json  corpus.txt
src/: main.rs
src/blocks/: block.rs  census.rs  chain.rs
src/comm/: convert.rs  messages.rs  packets.rs  router.rs
src/corpus/: corpus.rs
src/fs/: fs.rs
src/networking/: clients.rs  tcp.rs
src/nlp/: similarity.rs  spacy.rs
src/ops/: clock.rs
