[package]
name = "pilcrow"
version = "0.1.0"
authors = ["dluman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[[bin]]
name="pilcrowd"
path="src/main.rs"
