[package]
name = "pilcrow"
version = "0.1.0"
authors = ["dluman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
chrono = "0.4.0"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sha2 = "0.8.1"

[[bin]]
name="pilcrowd"
path="src/main.rs"
